фикс адаптива + новые картинки слайдера

--- a/classes/yoga/index.html
+++ b/classes/yoga/index.html
@@ -8,22 +8,24 @@
 </head>
 <body>
   <header class="c-header c-header--is-black">
-    <nav class="menu menu--is-black">
-      <a href="../../index.html" class="menu__logo"></a>
-      <div class="menu__divider"></div>
-      <ul class="menu__list">
-        <li class="menu__item"><a href="#" class="menu__link">About MIX</a></li>
-        <li class="menu__item"><a href="#" class="menu__link">Studios</a></li>
-        <li class="menu__item"><a href="#" class="menu__link">Prices</a></li>
-        <li class="menu__item"><a href="#" class="menu__link">Team</a></li>
-        <li class="menu__item">
-          <div class="menu__switch"> 
-            <span class="menu__language">En</span>
-            <a href="#" class="menu__language menu__language--is-hidden">Fr</a>
-          </div>
-        </li>
-        <li class="menu__item menu__item--has-no-hover"><a href="#" class="menu__button">Login</a></li>
-      </ul>
+    <nav class="menu">
+      <div class="menu__wrapper menu__wrapper--is-black">
+        <a href="../../index.html" class="menu__logo"></a>
+        <div class="menu__divider"></div>
+        <ul class="menu__list">
+          <li class="menu__item"><a href="#" class="menu__link">About MIX</a></li>
+          <li class="menu__item"><a href="#" class="menu__link">Studios</a></li>
+          <li class="menu__item"><a href="#" class="menu__link">Prices</a></li>
+          <li class="menu__item"><a href="#" class="menu__link">Team</a></li>
+          <li class="menu__item">
+            <div class="menu__switch"> 
+              <span class="menu__language">En</span>
+              <a href="#" class="menu__language menu__language--is-hidden">Fr</a>
+            </div>
+          </li>
+          <li class="menu__item menu__item--has-no-hover"><a href="#" class="menu__button">Login</a></li>
+        </ul>
+      </div>
     </nav>
     
   </header>
@@ -73,7 +75,7 @@
             <p class="shedule__trainer">Nora</p>
           </li>
           <li class="shedule__item">
-            <p class="shedule__date">Sat 12;00AM</p>
+            <p class="shedule__date">Sat 12:00AM</p>
             <p class="shedule__type">Open</p>
             <p class="shedule__trainer">Sheila</p>
           </li>
