--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="c-header">
     <nav class="menu">
-      <div class="menu__wrapeer">
+      <div class="menu__wrapper">
         <figure class="menu__logo"></figure>
         <div class="menu__divider"></div>
         <ul class="menu__list">
@@ -28,25 +28,19 @@
       </div>
     </nav>
     <div class="slider js-slider">
-      <section class="slider__slide js-slide">
+      <section class="slider__slide slider__slide--is-first js-slide">
         <div class="hero">
           <h2 class="hero__caption">MIX YOUR BODY AND EMOTIONS</h2>
           <p class="hero__text">A fit, healthy body is the best fashion statement. We are here to guide you.</p>
         </div>
       </section>
-      <section class="slider__slide js-slide">
+      <section class="slider__slide slider__slide--is-second js-slide">
         <div class="hero">
           <h2 class="hero__caption">MIX YOUR BODY AND EMOTIONS</h2>
           <p class="hero__text">A fit, healthy body is the best fashion statement. We are here to guide you.</p>
         </div>
       </section>
-      <section class="slider__slide js-slide">
-        <div class="hero">
-          <h2 class="hero__caption">MIX YOUR BODY AND EMOTIONS</h2>
-          <p class="hero__text">A fit, healthy body is the best fashion statement. We are here to guide you.</p>
-        </div>
-      </section>
-      <section class="slider__slide js-slide">
+      <section class="slider__slide slider__slide--is-third js-slide">
         <div class="hero">
           <h2 class="hero__caption">MIX YOUR BODY AND EMOTIONS</h2>
           <p class="hero__text">A fit, healthy body is the best fashion statement. We are here to guide you.</p>
@@ -60,7 +54,6 @@
           <li class="controls__number controls__number--is-active js-number">01</li>
           <li class="controls__number js-number">02</li>
           <li class="controls__number js-number">03</li>
-          <li class="controls__number js-number">04</li>
         </ol>
         <p class="controls__scroll">scroll</p>
         <div class="controls__switcher">
