--- a/index.html
+++ b/index.html
@@ -71,25 +71,25 @@
     </div>
     <ul class="programs">
       <li class="programs__item">
-        <a href="classes/barre/index.html" class="programs__link programs__link--is-barre">
+        <a href="programs/barre/index.html" class="programs__link programs__link--is-barre">
           <h4 class="programs__caption">Barre</h4>
           <p class="programs__text">An amazing workout combining the best elements of ballet barre with pilates and flexibility training</p>
         </a>
       </li>
       <li class="programs__item">
-        <a href="classes/fuse/index.html" class="programs__link programs__link--is-fuse">
+        <a href="programs/fuse/index.html" class="programs__link programs__link--is-fuse">
           <h4 class="programs__caption">Fuse</h4>
           <p class="programs__text">The exercise bike can help you burn tons of calories and tone your legs</p>
         </a>
       </li>
       <li class="programs__item">
-        <a href="classes/trx/index.html" class="programs__link programs__link--is-trx">
+        <a href="programs/trx/index.html" class="programs__link programs__link--is-trx">
           <h4 class="programs__caption">Trx</h4>
           <p class="programs__text">A fit, healthy body is the best fashion statement  We are here to guide you with this simple workout</p>
         </a>
       </li>
       <li class="programs__item">
-        <a href="classes/yoga/index.html" class="programs__link programs__link--is-yoga">
+        <a href="programs/yoga/index.html" class="programs__link programs__link--is-yoga">
           <h4 class="programs__caption">Yoga</h4>
           <p class="programs__text">Yoga is a group of physical, mental, and spiritual practices or disciplines </p>
         </a>
