--- a/about/index.html
+++ b/about/index.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>MIX Studio | YOGA</title>
-  <link rel="stylesheet" href="../../_assets/css/style.css">
+  <title>MIX Studio | ABOUT MIX</title>
+  <link rel="stylesheet" href="../_assets/css/style.css">
 </head>
 <body>
-  <header class="c-header c-header--is-black">
+  <header class="c-header">
     <nav class="menu">
-      <div class="menu__wrapper menu__wrapper--is-black">
-        <a href="../../index.html" class="menu__logo"></a>
+      <div class="menu__wrapper">
+        <a href="../index.html" class="menu__logo"></a>
         <div class="menu__divider"></div>
         <ul class="menu__list">
-          <li class="menu__item"><a href="#" class="menu__link">About MIX</a></li>
-          <li class="menu__item"><a href="#" class="menu__link">Studios</a></li>
-          <li class="menu__item"><a href="#" class="menu__link">Prices</a></li>
-          <li class="menu__item"><a href="#" class="menu__link">Team</a></li>
+          <li class="menu__item"><p class="menu__link menu__link--is-current">About MIX</p></li>
+          <li class="menu__item"><a href="../studios/" class="menu__link">Studios</a></li>
+          <li class="menu__item"><a href="../prices/" class="menu__link">Prices</a></li>
+          <li class="menu__item"><a href="../team/" class="menu__link">Team</a></li>
           <li class="menu__item">
             <div class="menu__switch"> 
               <span class="menu__language">En</span>
@@ -27,28 +27,101 @@
         </ul>
       </div>
     </nav>
+    <div class="header header--is-about">
+      <div class="squares squares--is-white">
+        <div class="squares__item"></div>
+        <div class="squares__item">
+          <div class="squares__title-wrapper">
+            <h2 class="squares__title squares__title--is-medium">ABOUT</h2>
+            <div class="squares__divider"></div>
+          </div>
+          <h2 class="squares__title">MIX</h2>
+          <p class="squares__text">
+            At MIX we believe that working out is about more than just breaking a sweat. We are a dynamic  boutique style fitness space offering a powerful and inspirational results producing fitness experience.  
+          </p>
+          <p class="squares__text">
+            Each discipline offers a full body workout and are all geared to work together bringing fun filled energy, professional level of instruction, high intensity all driven by great music!!
+          </p>
+          <a href="#" class="squares__button">book a class now</a>
+        </div>
+      </div>
+    </div>
   </header>
   
-  <footer class="c-footer c-footer--is-gray">
+  <main class="c-squares">
+    <div class="squares">
+      <div class="squares__item">
+        <div class="squares__title-wrapper">
+          <h3 class="squares__title">Our</h3>
+          <div class="squares__divider"></div>
+        </div>
+        <h3 class="squares__title squares__title--is-medium">Teachers</h3>
+        <p class="squares__text">
+          We believe our trainers should be the best out there so, we train our teachers one by one through an extensive program and ongoing continuing education.  When you enter a class, you’re trusting that you will be challenged and engaged, but you’re also trusting that your body will be kept safe. All our classes are run by specialists in their field in order to ensure our clients get their best workout.
+        </p>
+        <a href="../team/" class="squares__button">meet the team</a>
+      </div>
+      <div class="squares__item squares__item--has-photo-team"></div>
+      <div class="squares__item squares__item--has-photo-classes"></div>
+      <div class="squares__item">
+        <div class="squares__title-wrapper">
+          <h3 class="squares__title">Our</h3>
+          <div class="squares__divider"></div>
+        </div>
+        <h3 class="squares__title squares__title--is-medium">Classes</h3>
+        <p class="squares__text">
+          We have developed a mixture of class structures which integrate a results-producing system to tone and reshape the body and center the mind. Our classes will run from early morning to the evening designed to fit in with busy schedules and will be suitable for all fitness levels. 
+        </p>
+        <p class="squares__text">
+          We set out to make it as easy as possible and all classes can be purchased and booked directly online.  No contracts! No hassle!
+        </p>
+        <!--<a href="../classes" class="squares__button">Discover our classes</a>-->
+      </div>
+      <div class="squares__item">
+        <div class="squares__title-wrapper">
+          <h3 class="squares__title">Our</h3>
+          <div class="squares__divider"></div>
+        </div>
+        <h3 class="squares__title squares__title--is-medium">Space</h3>
+        <p class="squares__text">
+          Our unique space and classes are a place to free your mind, connect with your body, find your passion and be a part of our inspiring community.
+        </p>
+        <p class="squares__text">
+          We focused our attention to quality and detail in every aspect both in and out of the class. Providing a boutique style design with high-end quality sound, showers, amenities and a retail section with MIX branded and other brands of apparel and accessories.
+        </p>
+        <a href="../studios" class="squares__button">Find a studio</a>
+      </div>
+      <div class="squares__item squares__item--has-photo-space"></div>
+    </div>
+  </main>
+  
+  <footer class="c-footer c-footer--is-white">
     <div class="footer">
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">Main Menu</h4></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">About MIX</a></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">Studios</a></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">Prices</a></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">Team</a></li>
+        <li class="footer-menu__item"><a href="../about/" class="footer-menu__link">About MIX</a></li>
+        <li class="footer-menu__item"><a href="../studios/" class="footer-menu__link">Studios</a></li>
+        <li class="footer-menu__item"><a href="../prices/" class="footer-menu__link">Prices</a></li>
+        <li class="footer-menu__item"><a href="../team/" class="footer-menu__link">Team</a></li>
+      </ul>
+      <ul class="footer-menu">
+        <li class="footer-menu__item"><h4 class="footer-menu__caption">Programs</h4></li>
+        <li class="footer-menu__item"><a href="../programs/barre/" class="footer-menu__link">Barre</a></li>
+        <li class="footer-menu__item"><a href="../programs/fuse/" class="footer-menu__link">Fuse</a></li>
+        <li class="footer-menu__item"><a href="../programs/trx/" class="footer-menu__link">TRX</a></li>
+        <li class="footer-menu__item"><a href="../programs/yoga/" class="footer-menu__link">Yoga</a></li>
       </ul>
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">About</h4></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">Contact us</a></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">Careers</a></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">Terms and Conditions</a></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">Privacy Policy</a></li>
+        <li class="footer-menu__item"><a href="../about/contact." class="footer-menu__link">Contact us</a></li>
+        <li class="footer-menu__item"><a href="../about/careers/" class="footer-menu__link">Careers</a></li>
+        <li class="footer-menu__item"><a href="../about/terms/" class="footer-menu__link">Terms and Conditions</a></li>
+        <li class="footer-menu__item"><a href="../about/privacy" class="footer-menu__link">Privacy Policy</a></li>
       </ul>
       <ul class="footer-menu footer-menu--is-follow">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">Follow us</h4></li>
         <li class="footer-menu__item footer-menu__item--is-social">
-          <a href="" class="footer-menu__social footer-menu__social--is-instagram "></a>
+          <a href="https://www.instagram.com/mixstudioch/" class="footer-menu__social footer-menu__social--is-instagram "></a>
           <a href="" class="footer-menu__social footer-menu__social--is-fb"></a>
         </li>
       </ul>
