--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
   <header class="c-header">
-    <nav class="menu">
+    <nav class="menu menu--is-main">
       <div class="menu__wrapper">
         <figure class="menu__logo"></figure>
         <div class="menu__divider"></div>
         <ul class="menu__list">
-          <li class="menu__item"><a href="#" class="menu__link">About MIX</a></li>
-          <li class="menu__item"><a href="#" class="menu__link">Studios</a></li>
-          <li class="menu__item"><a href="#" class="menu__link">Prices</a></li>
-          <li class="menu__item"><a href="#" class="menu__link">Team</a></li>
+          <li class="menu__item"><a href="about/" class="menu__link">About MIX</a></li>
+          <li class="menu__item"><a href="studios/" class="menu__link">Studios</a></li>
+          <li class="menu__item"><a href="prices/" class="menu__link">Prices</a></li>
+          <li class="menu__item"><a href="team/" class="menu__link">Team</a></li>
           <li class="menu__item">
             <div class="menu__switch">  
               <span class="menu__language">En</span>
@@ -89,7 +89,7 @@
         </a>
       </li>
       <li class="programs__item">
-        <a href="programs/yoga/index.html" class="programs__link programs__link--is-yoga">
+        <a href="programs/yoga/" class="programs__link programs__link--is-yoga">
           <h4 class="programs__caption">Yoga</h4>
           <p class="programs__text">Yoga is a group of physical, mental, and spiritual practices or disciplines </p>
         </a>
