--- a/index.html
+++ b/index.html
@@ -123,22 +123,29 @@
     <div class="footer">
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">Main Menu</h4></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">About MIX</a></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">Studios</a></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">Prices</a></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">Team</a></li>
+        <li class="footer-menu__item"><a href="../about/" class="footer-menu__link">About MIX</a></li>
+        <li class="footer-menu__item"><a href="../studios/" class="footer-menu__link">Studios</a></li>
+        <li class="footer-menu__item"><a href="../prices/" class="footer-menu__link">Prices</a></li>
+        <li class="footer-menu__item"><a href="../team/" class="footer-menu__link">Team</a></li>
+      </ul>
+      <ul class="footer-menu">
+        <li class="footer-menu__item"><h4 class="footer-menu__caption">Programs</h4></li>
+        <li class="footer-menu__item"><a href="../programs/barre/" class="footer-menu__link">Barre</a></li>
+        <li class="footer-menu__item"><a href="../programs/fuse/" class="footer-menu__link">Fuse</a></li>
+        <li class="footer-menu__item"><a href="../programs/trx/" class="footer-menu__link">TRX</a></li>
+        <li class="footer-menu__item"><a href="../programs/yoga/" class="footer-menu__link">Yoga</a></li>
       </ul>
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">About</h4></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">Contact us</a></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">Careers</a></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">Terms and Conditions</a></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">Privacy Policy</a></li>
+        <li class="footer-menu__item"><a href="../about/contact." class="footer-menu__link">Contact us</a></li>
+        <li class="footer-menu__item"><a href="../about/careers/" class="footer-menu__link">Careers</a></li>
+        <li class="footer-menu__item"><a href="../about/terms/" class="footer-menu__link">Terms and Conditions</a></li>
+        <li class="footer-menu__item"><a href="../about/privacy" class="footer-menu__link">Privacy Policy</a></li>
       </ul>
       <ul class="footer-menu footer-menu--is-follow">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">Follow us</h4></li>
         <li class="footer-menu__item footer-menu__item--is-social">
-          <a href="" class="footer-menu__social footer-menu__social--is-instagram "></a>
+          <a href="https://www.instagram.com/mixstudioch/" class="footer-menu__social footer-menu__social--is-instagram "></a>
           <a href="" class="footer-menu__social footer-menu__social--is-fb"></a>
         </li>
       </ul>
@@ -147,7 +154,6 @@
         <div class="footer__logo"></div>
         <p class="footer__copy">&copy; 2017 MIX</p>
       </div>
-      
     </div>
   </footer>
   
