--- a/team/index.html
+++ b/team/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>MIX Studio | OUR STUDIOS</title>
+  <title>MIX Studio | TEAM</title>
   <link rel="stylesheet" href="../_assets/css/style.css">
 </head>
 <body>
@@ -14,9 +14,9 @@
         <div class="menu__divider"></div>
         <ul class="menu__list">
           <li class="menu__item"><a href="../about/" class="menu__link">About MIX</a></li>
-          <li class="menu__item"><p class="menu__link menu__link--is-current">Studios</p></li>
+          <li class="menu__item"><a href="../studios/" class="menu__link">Studios</a></li>
           <li class="menu__item"><a href="../prices/" class="menu__link">Prices</a></li>
-          <li class="menu__item"><a href="../team/" class="menu__link">Team</a></li>
+          <li class="menu__item"><p class="menu__link menu__link--is-current">Team</p></li>
           <li class="menu__item">
             <div class="menu__switch"> 
               <span class="menu__language">En</span>
@@ -27,75 +27,61 @@
         </ul>
       </div>
     </nav>
-    <div class="header header--is-studios">
+    <div class="header header--is-about">
       <div class="squares squares--is-white">
         <div class="squares__item"></div>
         <div class="squares__item">
           <div class="squares__title-wrapper">
-            <h2 class="squares__title">Our</h2>
+            <h2 class="squares__title">Talented</h2>
             <div class="squares__divider"></div>
           </div>
-          <h2 class="squares__title squares__title--is-medium">studios</h2>
+          <h2 class="squares__title squares__title--is-medium">Team</h2>
           <p class="squares__text">
-            Our studios  equipped with the lasest technogym products, flattering lighing, and a cold  pressed juice bar. Don’t be scared, our classes are suitable for all levels.
+            At MIX we believe that working out is about more than just breaking a sweat. We are a dynamic  boutique style fitness space offering a powerful and inspirational results producing fitness experience.  
           </p>
-          <a href="mailto:info@mix-studio.ch" class="squares__link">info@mix-studio.ch</a>
+          <p class="squares__text">
+            Each discipline offers a full body workout and are all geared to work together bringing fun filled energy, professional level of instruction, high intensity all driven by great music!
+          </p>
+          <a href="#" class="squares__button">book a class now</a>
         </div>
       </div>
     </div>
   </header>
-  <main class="c-studios">
-    <div class="caption">
-      <h3 class="caption__title caption__title--is-left">lausanne</h3>
-      <div class="caption__divider"></div>
-    </div>
-    <div class="studios">
-      <div class="studios__studio studios__studio--is-lausanne">
-        <h4 class="studios__title">
-          Bourg studio
-        </h4>
-        <p class="studios__address">
-          Rue de bourg 11  galerie de Bourg 1103 Lausanne
-        </p>
-        <p class="studios__phone">
-          +41 21 320 1041
-        </p>
-        <a href="lausanne/" class="studios__button">
-           FIND OUT MORE
-        </a>
-      </div>
-      <div class="studios__studio studios__studio--is-lausanne-const">
-        <h4 class="studios__title studios__title--is-white">
-          Coming soon...
-        </h4>
-        <p class="studios__address studios__address--is-white">
-          If you are not already on our mailing joint to get the updates
-        </p>
-        <form method="POST" action="subscribe.php" class="studios__form">
-          <input type="email" class="studios__input-email" placeholder="Email" required="required" pattern="([\w-\.]+)@((?:[\w]+\.)+)([a-zA-Z]{2,4})">
-          <input type="submit" class="studios__input-submit" value="subscribe">
-        </form>
+  
+  <main class="c-team">
+    <div class="caption__wrapper">
+      <div class="caption">
+        <h3 class="caption__title caption__title--is-left">Our team</h3>
+        <div class="caption__divider"></div>
       </div>
     </div>
-    <div class="caption">
-      <div class="caption__divider"></div>
-      <h3 class="caption__title caption__title--is-right">zurich</h3>
-    </div>
-    <div class="studios">
-      <div class="studios__studio studios__studio--is-zurich">
-        <h4 class="studios__title">
-          zurich studio
-        </h4>
-        <p class="studios__address">
-          Rue de bourg 11 galerie de Bourg 1103 Lausanne
-        </p>
-        <p class="studios__phone">
-          +41 21 320 1041
-        </p>
+    <div class="team">
+      <div class="team__wrapper">
+        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
+        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
+        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
+        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
+        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
+        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
+        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
+        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
+        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
+        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
+        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
+        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
+      </div>
+      <div class="team__controls">
+        <div class="team__panel team__panel--is-left">
+          <div class="team__arrow team__arrow--is-left"></div>
+        </div>
+        <div class="team__panel team__panel--is-right">
+          <div class="team__arrow team__arrow--is-right"></div>
+        </div>
       </div>
     </div>
   </main>
-  <footer class="c-footer c-footer--is-gray">
+  
+  <footer class="c-footer c-footer--is-white">
     <div class="footer">
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">Main Menu</h4></li>
