--- a/team/index.html
+++ b/team/index.html
@@ -55,27 +55,22 @@
         <div class="caption__divider"></div>
       </div>
     </div>
-    <div class="team">
-      <div class="team__wrapper">
-        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
-        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
-        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
-        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
-        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
-        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
-        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
-        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
-        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
-        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
-        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
-        <div class="team__item"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
+    <div class="team js-container">
+      <div class="team__wrapper js-team">
+        <div class="team__item js-trainer"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
+        <div class="team__item js-trainer"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_alessandra.jpg" alt="" class="team__photo"></div>
+        <div class="team__item js-trainer"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_shirin.jpg" alt="" class="team__photo"></div>
+        <div class="team__item js-trainer"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_sheila.jpg" alt="" class="team__photo"></div>
+        <div class="team__item js-trainer"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_daniela.jpg" alt="" class="team__photo"></div>
+        <div class="team__item js-trainer"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_celine.jpg" alt="" class="team__photo"></div>
+        <div class="team__item js-trainer"><p class="team__name"></p><img src="../_assets/img/_team/team_mix_jennyfer.jpg" alt="" class="team__photo"></div>
       </div>
       <div class="team__controls">
         <div class="team__panel team__panel--is-left">
-          <div class="team__arrow team__arrow--is-left"></div>
+          <div class="team__arrow team__arrow--is-left js-switch-left"></div>
         </div>
         <div class="team__panel team__panel--is-right">
-          <div class="team__arrow team__arrow--is-right"></div>
+          <div class="team__arrow team__arrow--is-right js-switch-right"></div>
         </div>
       </div>
     </div>
@@ -119,3 +114,6 @@
     </div>
   </footer>
   
+  <script src="../_assets/js/team.js"></script>
+</body>
+</html>
