--- a/details/terms/index.html
+++ b/details/terms/index.html
@@ -34,41 +34,41 @@
         <aside class="menu-vert">
           <nav class="menu-vert__wrapper">
             <ul class="menu-vert__list">
-              <li class="menu-vert__item">About these conditions</li>
-              <li class="menu-vert__item">Users of our classes</li>
-              <li class="menu-vert__item">Waiver and limitation of liability</li>
-              <li class="menu-vert__item">Class packages</li>
-              <li class="menu-vert__item">Booking a class</li>
-              <li class="menu-vert__item">Goods</li>
-              <li class="menu-vert__item">Use of our website</li>
-              <li class="menu-vert__item">Your username and password</li>
-              <li class="menu-vert__item">Data protection / personal information</li>
-              <li class="menu-vert__item">Electronic communications</li>
-              <li class="menu-vert__item">Intellectual property</li>
-              <li class="menu-vert__item">Personal property</li>
-              <li class="menu-vert__item">Applicable law and competent courts in case of dispute</li>
-              <li class="menu-vert__item">Information about us</li>
-              <li class="menu-vert__item">Variation</li>
+              <li class="menu-vert__item"><a href="#" class="menu-vert__link menu-vert__link--is-active">About these conditions</a></li>
+              <li class="menu-vert__item"><a href="#" class="menu-vert__link">Users of our classes</a></li>
+              <li class="menu-vert__item"><a href="#" class="menu-vert__link">Waiver and limitation of liability</a></li>
+              <li class="menu-vert__item"><a href="#" class="menu-vert__link">Class packages</a></li>
+              <li class="menu-vert__item"><a href="#" class="menu-vert__link">Booking a class</a></li>
+              <li class="menu-vert__item"><a href="#" class="menu-vert__link">Goods</a></li>
+              <li class="menu-vert__item"><a href="#" class="menu-vert__link">Use of our website</a></li>
+              <li class="menu-vert__item"><a href="#" class="menu-vert__link">Your username and password</a></li>
+              <li class="menu-vert__item"><a href="#" class="menu-vert__link">Data protection / personal information</a></li>
+              <li class="menu-vert__item"><a href="#" class="menu-vert__link">Electronic communications</a></li>
+              <li class="menu-vert__item"><a href="#" class="menu-vert__link">Intellectual property</a></li>
+              <li class="menu-vert__item"><a href="#" class="menu-vert__link">Personal property</a></li>
+              <li class="menu-vert__item"><a href="#" class="menu-vert__link">Applicable law and competent courts in case of dispute</a></li>
+              <li class="menu-vert__item"><a href="#" class="menu-vert__link">Information about us</a></li>
+              <li class="menu-vert__item"><a href="#" class="menu-vert__link">Variation</a></li>
             </ul>
           </nav>
         </aside>
       </div>
       <div class="l-container__column l-container__column--is-right">
         <article class="article article--is-right">
-          <!--<div class="caption caption--is-inside">
+          <div class="caption caption--is-inside">
             <div class="caption__wrapper">
               <h2 class="caption__title caption__title--is-left">TERMS</h2>
               <div class="caption__divider"></div>
             </div>
             <h2 class="caption__title">AND CONDITIONS</h2>
-          </div>-->
+          </div>
           <h3 class="article__subhead">ABOUT  THESE CONDITIONS</h3>
           <ol class="article__list">
             <li class="article__item">
               These are the terms and conditions which apply to your use of this Website and the purchase of Goods and Services from us. If you do not agree to these Conditions, you must not use this Website.
             </li>
             <li class="article__item">
-              This Website and the Goods and Services displayed on it are provided by MIX Fitness Sarldba MIX Studio, MIX Studio Sarl, collectively referred to in these Conditions as «we», «us» and «our». When we refer to «you» and «your» we mean the user of this Website, purchaser of Goods or user of our Services.
+              This Website and the Goods and Services displayed on it are provided by <span class="article__link">MIX Fitness Sarldba MIX Studio</span>, <span class="article__link">MIX Studio Sarl</span>, collectively referred to in these Conditions as «we», «us» and «our». When we refer to «you» and «your» we mean the user of this Website, purchaser of Goods or user of our Services.
             </li>
             <li class="article__item">
               You should read these Conditions carefully before using this Website or purchasing any Goods or Services from us.
@@ -103,16 +103,41 @@
               «Studios» any of our studios, as published on our Website from time to time;
             </li>
             <li class="article__item">
-              «Website» http://mix-studio.ch
+              «Website» <a href="http://mix-studio.ch" class="article__link">http://mix-studio.ch</a>
             </li>
           </ul>
+          <h3 class="article__subhead">
+            USERS OF OUR CLASSES
+          </h3>
+          <ol class="article__list">
+            <li class="article__item">
+              You must be aged 18 years or over to attend any of our Classes or to use any of our facilities at the Studios. If you are under 18, you may register and use the Website only with the involvement of a parent or guardian. Registration of a minor (ages 12-18) must be completed in person at one of our studios with a parent or guardian. And must meet the minimum height requirement of 150cm               
+            </li>
+            <li class="article__item">
+              You agree to comply with our Class rules which you can see online or displayed in all of our locations. The access rules relate to our opening hours, use of our facilities and your conduct.
+            </li>
+            <li class="article__item">
+              Instructors and Classes are subject to change.
+            </li>
+            <li class="article__item">
+              We reserve the right to refuse you access to the Studios and suspend or terminate your use of the Services if we reasonably consider that your conduct is damaging to our reputation, is in breach of these Conditions or would otherwise be in the interests of other users of the Studios or participants in our Classes.
+            </li>
+          </ol>
+          <h3 class="article__subhead">
+            WAIVER AND LIMITATION OF LIABILITY 
+          </h3>
+          <ol class="article__list">
+            <li class="article__item">
+              By signing up for and/or attending <span class="article__link">MIX studio</span> classes, events, activities, and other programs and using the premises, facilities and equipment (individually and/or collectively, the "Classes and Facilities") of <span class="article__link">MIX studio</span> you hereby agree that there are certain inherent risks and dangers involved in participating in the Classes.  
+            </li>
+          </ol>
         </article>
       </div>
     </div>  
   </main>
   
   
-  <footer class="c-footer c-footer--is-white">
+  <footer class="c-footer c-footer--is-gray">
     <div class="footer">
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">Main Menu</h4></li>
