--- a/details/terms/index.html
+++ b/details/terms/index.html
@@ -34,9 +34,9 @@
         <aside class="menu-vert">
           <nav class="menu-vert__wrapper">
             <ul class="menu-vert__list">
-              <li class="menu-vert__item"><a href="#" class="menu-vert__link menu-vert__link--is-active">About these conditions</a></li>
-              <li class="menu-vert__item"><a href="#" class="menu-vert__link">Users of our classes</a></li>
-              <li class="menu-vert__item"><a href="#" class="menu-vert__link">Waiver and limitation of liability</a></li>
+              <li class="menu-vert__item"><a href="#about" class="menu-vert__link menu-vert__link--is-active">About these conditions</a></li>
+              <li class="menu-vert__item"><a href="#users" class="menu-vert__link">Users of our classes</a></li>
+              <li class="menu-vert__item"><a href="#waiver" class="menu-vert__link">Waiver and limitation of liability</a></li>
               <li class="menu-vert__item"><a href="#" class="menu-vert__link">Class packages</a></li>
               <li class="menu-vert__item"><a href="#" class="menu-vert__link">Booking a class</a></li>
               <li class="menu-vert__item"><a href="#" class="menu-vert__link">Goods</a></li>
@@ -62,7 +62,7 @@
             </div>
             <h2 class="caption__title">AND CONDITIONS</h2>
           </div>
-          <h3 class="article__subhead">ABOUT  THESE CONDITIONS</h3>
+          <h3 class="article__subhead" id="about">ABOUT  THESE CONDITIONS</h3>
           <ol class="article__list">
             <li class="article__item">
               These are the terms and conditions which apply to your use of this Website and the purchase of Goods and Services from us. If you do not agree to these Conditions, you must not use this Website.
@@ -106,7 +106,7 @@
               «Website» <a href="http://mix-studio.ch" class="article__link">http://mix-studio.ch</a>
             </li>
           </ul>
-          <h3 class="article__subhead">
+          <h3 class="article__subhead" id="users">
             USERS OF OUR CLASSES
           </h3>
           <ol class="article__list">
@@ -123,7 +123,7 @@
               We reserve the right to refuse you access to the Studios and suspend or terminate your use of the Services if we reasonably consider that your conduct is damaging to our reputation, is in breach of these Conditions or would otherwise be in the interests of other users of the Studios or participants in our Classes.
             </li>
           </ol>
-          <h3 class="article__subhead">
+          <h3 class="article__subhead" id="waiver">
             WAIVER AND LIMITATION OF LIABILITY 
           </h3>
           <ol class="article__list">
