--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
   <footer class="c-footer">
     <div class="footer">
       <ul class="footer-menu">
-        <li class="footer-menu__item"><h4 class="footer-menu__caption">Main Menu</h4></li>
-        <li class="footer-menu__item"><a href="about/" class="footer-menu__link">About MIX</a></li>
+        <li class="footer-menu__item"><h4 class="footer-menu__caption">EXPLORE MIX</h4></li>
+        <li class="footer-menu__item"><a href="about/" class="footer-menu__link">About us</a></li>
         <li class="footer-menu__item"><a href="studios/" class="footer-menu__link">Studios</a></li>
         <li class="footer-menu__item"><a href="prices/" class="footer-menu__link">Prices</a></li>
         <li class="footer-menu__item"><a href="team/" class="footer-menu__link">Team</a></li>
       </ul>
       <ul class="footer-menu">
-        <li class="footer-menu__item"><h4 class="footer-menu__caption">Programs</h4></li>
+        <li class="footer-menu__item"><h4 class="footer-menu__caption">PROGRAMS</h4></li>
         <li class="footer-menu__item"><a href="programs/barre/" class="footer-menu__link">Barre</a></li>
         <li class="footer-menu__item"><a href="programs/fuse/" class="footer-menu__link">Fuse</a></li>
         <li class="footer-menu__item"><a href="programs/trx/" class="footer-menu__link">TRX</a></li>
