--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>MIX Studio | ABOUT MIX</title>
+  <title>MIX Studio | ABOUT Us</title>
   <link rel="stylesheet" href="../_assets/css/style.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
         <a href="../index.html" class="menu__logo"></a>
         <div class="menu__divider"></div>
         <ul class="menu__list">
-          <li class="menu__item"><p class="menu__link menu__link--is-current">About MIX</p></li>
+          <li class="menu__item"><p class="menu__link menu__link--is-current">About Us</p></li>
           <li class="menu__item"><a href="../studios/" class="menu__link">Studios</a></li>
           <li class="menu__item"><a href="../prices/" class="menu__link">Prices</a></li>
           <li class="menu__item"><a href="../team/" class="menu__link">Team</a></li>
@@ -35,7 +35,7 @@
             <h2 class="squares__title squares__title--is-medium">ABOUT</h2>
             <div class="squares__divider"></div>
           </div>
-          <h2 class="squares__title">MIX</h2>
+          <h2 class="squares__title">US</h2>
           <p class="squares__text">
             At MIX we believe that working out is about more than just breaking a sweat. We are a dynamic  boutique style fitness space offering a powerful and inspirational results producing fitness experience.  
           </p>
@@ -99,7 +99,7 @@
     <div class="footer">
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">Main Menu</h4></li>
-        <li class="footer-menu__item"><a href="../about/" class="footer-menu__link">About MIX</a></li>
+        <li class="footer-menu__item"><a href="../about/" class="footer-menu__link">About Us</a></li>
         <li class="footer-menu__item"><a href="../studios/" class="footer-menu__link">Studios</a></li>
         <li class="footer-menu__item"><a href="../prices/" class="footer-menu__link">Prices</a></li>
         <li class="footer-menu__item"><a href="../team/" class="footer-menu__link">Team</a></li>
