--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <figure class="menu__logo"></figure>
         <div class="menu__divider"></div>
         <ul class="menu__list">
-          <li class="menu__item"><a href="about/" class="menu__link">About MIX</a></li>
+          <li class="menu__item"><a href="about/" class="menu__link">About Us</a></li>
           <li class="menu__item"><a href="studios/" class="menu__link">Studios</a></li>
           <li class="menu__item"><a href="prices/" class="menu__link">Prices</a></li>
           <li class="menu__item"><a href="team/" class="menu__link">Team</a></li>
