--- a/programs/yoga/index.html
+++ b/programs/yoga/index.html
@@ -13,7 +13,7 @@
         <a href="../../index.html" class="menu__logo"></a>
         <div class="menu__divider"></div>
         <ul class="menu__list">
-          <li class="menu__item"><a href="#" class="menu__link">About MIX</a></li>
+          <li class="menu__item"><a href="#" class="menu__link">About Us</a></li>
           <li class="menu__item"><a href="#" class="menu__link">Studios</a></li>
           <li class="menu__item"><a href="#" class="menu__link">Prices</a></li>
           <li class="menu__item"><a href="#" class="menu__link">Team</a></li>
@@ -104,7 +104,7 @@
     <div class="footer">
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">Main Menu</h4></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">About MIX</a></li>
+        <li class="footer-menu__item"><a href="" class="footer-menu__link">About Us</a></li>
         <li class="footer-menu__item"><a href="" class="footer-menu__link">Studios</a></li>
         <li class="footer-menu__item"><a href="" class="footer-menu__link">Prices</a></li>
         <li class="footer-menu__item"><a href="" class="footer-menu__link">Team</a></li>
