--- a/team/index.html
+++ b/team/index.html
@@ -13,7 +13,7 @@
         <a href="../index.html" class="menu__logo"></a>
         <div class="menu__divider"></div>
         <ul class="menu__list">
-          <li class="menu__item"><a href="../about/" class="menu__link">About MIX</a></li>
+          <li class="menu__item"><a href="../about/" class="menu__link">About Us</a></li>
           <li class="menu__item"><a href="../studios/" class="menu__link">Studios</a></li>
           <li class="menu__item"><a href="../prices/" class="menu__link">Prices</a></li>
           <li class="menu__item"><p class="menu__link menu__link--is-current">Team</p></li>
@@ -80,7 +80,7 @@
     <div class="footer">
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">Main Menu</h4></li>
-        <li class="footer-menu__item"><a href="../about/" class="footer-menu__link">About MIX</a></li>
+        <li class="footer-menu__item"><a href="../about/" class="footer-menu__link">About Us</a></li>
         <li class="footer-menu__item"><a href="../studios/" class="footer-menu__link">Studios</a></li>
         <li class="footer-menu__item"><a href="../prices/" class="footer-menu__link">Prices</a></li>
         <li class="footer-menu__item"><a href="../team/" class="footer-menu__link">Team</a></li>
