--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <li class="footer-menu__item"><a href="programs/yoga/" class="footer-menu__link">Yoga</a></li>
       </ul>
       <ul class="footer-menu">
-        <li class="footer-menu__item"><h4 class="footer-menu__caption">About</h4></li>
+        <li class="footer-menu__item"><h4 class="footer-menu__caption">More Info</h4></li>
         <li class="footer-menu__item"><a href="details/contact." class="footer-menu__link">Contact us</a></li>
         <li class="footer-menu__item"><a href="details/careers/" class="footer-menu__link">Careers</a></li>
         <li class="footer-menu__item"><a href="details/terms/" class="footer-menu__link">Terms and Conditions</a></li>
