--- a/programs/yoga/index.html
+++ b/programs/yoga/index.html
@@ -110,7 +110,7 @@
         <li class="footer-menu__item"><a href="" class="footer-menu__link">Team</a></li>
       </ul>
       <ul class="footer-menu">
-        <li class="footer-menu__item"><h4 class="footer-menu__caption">About</h4></li>
+        <li class="footer-menu__item"><h4 class="footer-menu__caption">More Info</h4></li>
         <li class="footer-menu__item"><a href="" class="footer-menu__link">Contact us</a></li>
         <li class="footer-menu__item"><a href="" class="footer-menu__link">Careers</a></li>
         <li class="footer-menu__item"><a href="" class="footer-menu__link">Terms and Conditions</a></li>
