--- a/team/index.html
+++ b/team/index.html
@@ -93,7 +93,7 @@
         <li class="footer-menu__item"><a href="../programs/yoga/" class="footer-menu__link">Yoga</a></li>
       </ul>
       <ul class="footer-menu">
-        <li class="footer-menu__item"><h4 class="footer-menu__caption">About</h4></li>
+        <li class="footer-menu__item"><h4 class="footer-menu__caption">More Info</h4></li>
         <li class="footer-menu__item"><a href="../about/contact." class="footer-menu__link">Contact us</a></li>
         <li class="footer-menu__item"><a href="../about/careers/" class="footer-menu__link">Careers</a></li>
         <li class="footer-menu__item"><a href="../about/terms/" class="footer-menu__link">Terms and Conditions</a></li>
