--- a/programs/yoga/index.html
+++ b/programs/yoga/index.html
@@ -13,10 +13,10 @@
         <a href="../../index.html" class="menu__logo"></a>
         <div class="menu__divider"></div>
         <ul class="menu__list">
-          <li class="menu__item"><a href="#" class="menu__link">About Us</a></li>
-          <li class="menu__item"><a href="#" class="menu__link">Studios</a></li>
-          <li class="menu__item"><a href="#" class="menu__link">Prices</a></li>
-          <li class="menu__item"><a href="#" class="menu__link">Team</a></li>
+          <li class="menu__item"><a href="../../about/" class="menu__link">About Us</a></li>
+          <li class="menu__item"><a href="../../studios/" class="menu__link">Studios</a></li>
+          <li class="menu__item"><a href="../../prices/" class="menu__link">Prices</a></li>
+          <li class="menu__item"><a href="../../team/" class="menu__link">Team</a></li>
           <li class="menu__item">
             <div class="menu__switch"> 
               <span class="menu__language">En</span>
@@ -35,7 +35,7 @@
     
     <article class="article">
       <div class="article__wrapper">
-        <div class="caption caption--is-inside">
+        <div class="caption">
           <h1 class="caption__title caption__title--is-left">YOGA</h1>
           <div class="caption__divider"></div>
         </div>
