--- a/team/index.html
+++ b/team/index.html
@@ -27,7 +27,7 @@
         </ul>
       </div>
     </nav>
-    <div class="header header--is-about">
+    <div class="header header--is-team">
       <div class="squares squares--is-white">
         <div class="squares__item"></div>
         <div class="squares__item">
@@ -37,10 +37,7 @@
           </div>
           <h2 class="squares__title squares__title--is-medium">Team</h2>
           <p class="squares__text">
-            At MIX we believe that working out is about more than just breaking a sweat. We are a dynamic  boutique style fitness space offering a powerful and inspirational results producing fitness experience.  
-          </p>
-          <p class="squares__text">
-            Each discipline offers a full body workout and are all geared to work together bringing fun filled energy, professional level of instruction, high intensity all driven by great music!
+            Fitness instructors organise exercise programmes to improve people's health and fitness. They're all uber certified, kind of fanny, and great in what they do.
           </p>
           <a href="#" class="squares__button">book a class now</a>
         </div>
