--- a/programs/yoga/index.html
+++ b/programs/yoga/index.html
@@ -110,6 +110,13 @@
         <li class="footer-menu__item"><a href="" class="footer-menu__link">Team</a></li>
       </ul>
       <ul class="footer-menu">
+        <li class="footer-menu__item"><h4 class="footer-menu__caption">PROGRAMS</h4></li>
+        <li class="footer-menu__item"><a href="programs/barre/" class="footer-menu__link">Barre</a></li>
+        <li class="footer-menu__item"><a href="programs/fuse/" class="footer-menu__link">Fuse</a></li>
+        <li class="footer-menu__item"><a href="programs/trx/" class="footer-menu__link">TRX</a></li>
+        <li class="footer-menu__item"><a href="programs/yoga/" class="footer-menu__link">Yoga</a></li>
+      </ul>
+      <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">More Info</h4></li>
         <li class="footer-menu__item"><a href="" class="footer-menu__link">Contact us</a></li>
         <li class="footer-menu__item"><a href="" class="footer-menu__link">Careers</a></li>
