--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
       </ul>
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">More Info</h4></li>
-        <li class="footer-menu__item"><a href="details/contact." class="footer-menu__link">Contact us</a></li>
+        <li class="footer-menu__item"><a href="details/contact/" class="footer-menu__link">Contact us</a></li>
         <li class="footer-menu__item"><a href="details/careers/" class="footer-menu__link">Careers</a></li>
         <li class="footer-menu__item"><a href="details/terms/" class="footer-menu__link">Terms and Conditions</a></li>
-        <li class="footer-menu__item"><a href="../about/privacy" class="footer-menu__link">Privacy Policy</a></li>
+        <li class="footer-menu__item"><a href="details/privacy" class="footer-menu__link">Privacy Policy</a></li>
       </ul>
       <ul class="footer-menu footer-menu--is-follow">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">Follow us</h4></li>
