--- a/programs/yoga/index.html
+++ b/programs/yoga/index.html
@@ -104,24 +104,24 @@
     <div class="footer">
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">Main Menu</h4></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">About Us</a></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">Studios</a></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">Prices</a></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">Team</a></li>
+        <li class="footer-menu__item"><a href="../../about/" class="footer-menu__link">About Us</a></li>
+        <li class="footer-menu__item"><a href="../../studios/" class="footer-menu__link">Studios</a></li>
+        <li class="footer-menu__item"><a href="../../prices/" class="footer-menu__link">Prices</a></li>
+        <li class="footer-menu__item"><a href="../../team/" class="footer-menu__link">Team</a></li>
       </ul>
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">PROGRAMS</h4></li>
-        <li class="footer-menu__item"><a href="programs/barre/" class="footer-menu__link">Barre</a></li>
-        <li class="footer-menu__item"><a href="programs/fuse/" class="footer-menu__link">Fuse</a></li>
-        <li class="footer-menu__item"><a href="programs/trx/" class="footer-menu__link">TRX</a></li>
-        <li class="footer-menu__item"><a href="programs/yoga/" class="footer-menu__link">Yoga</a></li>
+        <li class="footer-menu__item"><a href="../barre/" class="footer-menu__link">Barre</a></li>
+        <li class="footer-menu__item"><a href="../fuse/" class="footer-menu__link">Fuse</a></li>
+        <li class="footer-menu__item"><a href="../trx/" class="footer-menu__link">TRX</a></li>
+        <li class="footer-menu__item"><a href="../yoga/" class="footer-menu__link">Yoga</a></li>
       </ul>
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">More Info</h4></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">Contact us</a></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">Careers</a></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">Terms and Conditions</a></li>
-        <li class="footer-menu__item"><a href="" class="footer-menu__link">Privacy Policy</a></li>
+        <li class="footer-menu__item"><a href="../../details/contact/" class="footer-menu__link">Contact us</a></li>
+        <li class="footer-menu__item"><a href="../../details/careers/" class="footer-menu__link">Careers</a></li>
+        <li class="footer-menu__item"><a href="../../details/terms/" class="footer-menu__link">Terms and Conditions</a></li>
+        <li class="footer-menu__item"><a href="../../details/privacy" class="footer-menu__link">Privacy Policy</a></li>
       </ul>
       <ul class="footer-menu footer-menu--is-follow">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">Follow us</h4></li>
