--- a/programs/yoga/index.html
+++ b/programs/yoga/index.html
@@ -103,7 +103,7 @@
   <footer class="c-footer c-footer--is-gray">
     <div class="footer">
       <ul class="footer-menu">
-        <li class="footer-menu__item"><h4 class="footer-menu__caption">Main Menu</h4></li>
+        <li class="footer-menu__item"><h4 class="footer-menu__caption">EXPLORE MIX</h4></li>
         <li class="footer-menu__item"><a href="../../about/" class="footer-menu__link">About Us</a></li>
         <li class="footer-menu__item"><a href="../../studios/" class="footer-menu__link">Studios</a></li>
         <li class="footer-menu__item"><a href="../../prices/" class="footer-menu__link">Prices</a></li>
