персональная страница тренера

--- a/team/angelina/index.html
+++ b/team/angelina/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>MIX Studio | YOGA</title>
+  <title>MIX Studio | TEAM | ANGELINA</title>
   <link rel="stylesheet" href="../../_assets/css/style.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
           <li class="menu__item"><a href="../../about/" class="menu__link">About Us</a></li>
           <li class="menu__item"><a href="../../studios/" class="menu__link">Studios</a></li>
           <li class="menu__item"><a href="../../prices/" class="menu__link">Prices</a></li>
-          <li class="menu__item"><a href="../../team/" class="menu__link">Team</a></li>
+          <li class="menu__item"><a href="../../team/" class="menu__link menu__link--is-current">Team</a></li>
           <li class="menu__item">
             <div class="menu__switch"> 
               <span class="menu__language">En</span>
@@ -34,70 +34,43 @@
   <!--<main class="c-article c-article--is-yoga">-->
   <main class="l-container">
     <div class="l-container__row">
-      <div class="l-container__column l-container__column--is-left l-container__column--is-yoga">
+      <div class="l-container__column l-container__column--is-left l-container__column--is-team-angelina">
       </div>
       <div class="l-container__column l-container__column--is-right">
         <article class="article">
           <div class="article__wrapper">
             <div class="caption">
-              <h1 class="caption__title caption__title--is-left">YOGA</h1>
+              <h1 class="caption__title caption__title--is-left">Angelina</h1>
               <div class="caption__divider"></div>
             </div>
             <p class="article__lead">
-              This class fuses traditional vinyasa yoga methodology with contemporary dynamic flow. Yoga asanas raise the body's heat and a strong emphasis on linking breath to movement creates a steady and consistent flow from pose to pose.
+              Angelina's ethos is simple, show up and leave nothing in the tank. Watch your body transform through powerful workouts fuelled by awesome music and energy. There is nowhere to hide in her sessions, her energy is crazy and she'll keep you fighting for it until the very end. 
             </p>
-            <p class="article__lead">
-              This powerful fluid exercise format works inner and outer alignment, strength and flexibility moving energy to produce a state of inner calm and balance.  All this set to great music, including rock, reggae, hip hop, blues and world beats.
-            </p>
-            <h3 class="article__subhead">
-              flow base
-            </h3>
-            <p class="article__text">
-              Our yoga flow base offers you a chance to explore a creative slower paced flow format versus our open yoga flow. Focusing more on flexibility and relaxation, you will find yourself spending more time in postures and transitions while using your breath as your guide. This class is accessible to beginner students but, also fantastic for intermediate or advanced levels looking to deepen their practice.
-            </p>
-            <h3 class="article__subhead">
-              flow open
-            </h3>
-            <p class="article__text">
-              Open to beginners and all levels. This class fuses traditional vinyasa yoga methodology with contemporary dynamic flow. Yoga asanas raise the body's heat and a strong emphasis on linking breath to movement creates a steady and consistent flow from pose to pose. This powerful fluid exercise format works inner and outer alignment, strength and flexibility moving energy to produce a state of inner calm and balance. All this set to great music, including rock, reggae, hip hop, blues and world beats. Modifications are offered for beginners and advanced options are given for those who are looking to challenge themselves during their workout. Class taught in English.
-            </p>
+            <div class="footer-menu__item footer-menu__item--is-social footer-menu__item--is-black">
+              <a href="" class="footer-menu__social footer-menu__social--is-instagram "></a>
+              <a href="" class="footer-menu__social footer-menu__social--is-fb"></a>
+            </div>
             <h3 class="article__subhead">Upcoming classes</h3>
             <ul class="shedule">
               <li class="shedule__item">
-                <p class="shedule__date">Sun 07:00AM</p>
-                <p class="shedule__type">Base</p>
-                <p class="shedule__trainer">Nora</p>
+                <p class="shedule__type">Cycle</p>
               </li>
               <li class="shedule__item">
-                <p class="shedule__date">Mon 12:00AM</p>
-                <p class="shedule__type">Open</p>
-                <p class="shedule__trainer">Sheila</p>
+                <p class="shedule__date">Sat 10:45AM</p>
               </li>
               <li class="shedule__item">
-                <p class="shedule__date">Mon 07:00AM</p>
-                <p class="shedule__type">Base</p>
-                <p class="shedule__trainer">Nora</p>
+                <p class="shedule__date">Sat 11:45AM</p>
               </li>
-              <li class="shedule__item">
-                <p class="shedule__date">Sat 12:00AM</p>
-                <p class="shedule__type">Open</p>
-                <p class="shedule__trainer">Sheila</p>
+             <li class="shedule__item">
+                <p class="shedule__date">Mon 10:45</p>
               </li>
             </ul>
-            <h3 class="article__subhead">trainers</h3>
-            <ul class="trainers">
-              <li class="trainers__item">
-                <p class="trainers__name">Sheila</p>
-                <a href="../../team/sheila" class="trainers__link">
-                  <img src="../../_assets/img/_yoga/sheila.jpg" alt="Sheila" class="trainers__photo">
-                </a>
-              </li>
-              <li class="trainers__item">
-                <p class="trainers__name">Nora</p>
-                <a href="../../team/nora" class="trainers__link">
-                  <img src="../../_assets/img/_yoga/nora.jpg" alt="Nora" class="trainers__photo">
-                </a>
-              </li>
+            <h3 class="article__subhead">Favorite tracks</h3>
+            <ul class="spotify">
+              <li class="spotify__item"><img src="../../_assets/img/_team/_personal/angelina/Layer3.jpg" alt=""></li>
+              <li class="spotify__item"><img src="../../_assets/img/_team/_personal/angelina/Layer4.jpg" alt=""></li>
+              <li class="spotify__item"><img src="../../_assets/img/_team/_personal/angelina/Layer5.jpg" alt=""></li>
+              <li class="spotify__item"><img src="../../_assets/img/_team/_personal/angelina/Layer6.jpg" alt=""></li>
             </ul>
           </div>
         </article>
