мелкие правки на главной и добавил видео

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <li class="menu__item"><a href="studios/" class="menu__link">Studios</a></li>
           <li class="menu__item"><a href="prices/" class="menu__link">Prices</a></li>
           <li class="menu__item"><a href="team/" class="menu__link">Team</a></li>
+          <li class="menu__item"><a href="blog/" class="menu__link">blog &ndash; Fuel</a></li>
           <li class="menu__item">
             <div class="menu__switch">  
               <span class="menu__language">Fr</span>
@@ -30,25 +31,25 @@
     <div class="slider js-slider">
       <section class="slider__slide slider__slide--is-first js-slide">
         <div class="hero">
-          <h2 class="hero__caption">MIX YOUR BODY AND EMOTIONS</h2>
+          <h2 class="hero__caption">Your body&hellip; find your mix</h2>
           <p class="hero__text">A fit, healthy body is the best fashion statement. We are here to guide you.</p>
         </div>
       </section>
       <section class="slider__slide slider__slide--is-second js-slide">
         <div class="hero">
-          <h2 class="hero__caption">MIX YOUR BODY AND EMOTIONS</h2>
+          <h2 class="hero__caption">Your body&hellip; find your mix</h2>
           <p class="hero__text">A fit, healthy body is the best fashion statement. We are here to guide you.</p>
         </div>
       </section>
       <section class="slider__slide slider__slide--is-third js-slide">
         <div class="hero">
-          <h2 class="hero__caption">MIX YOUR BODY AND EMOTIONS</h2>
+          <h2 class="hero__caption">Your body&hellip; find your mix</h2>
           <p class="hero__text">A fit, healthy body is the best fashion statement. We are here to guide you.</p>
         </div>
       </section>
       <section class="slider__slide slider__slide--is-fourth js-slide">
         <div class="hero">
-          <h2 class="hero__caption">MIX YOUR BODY AND EMOTIONS</h2>
+          <h2 class="hero__caption">Your body&hellip; find your mix</h2>
           <p class="hero__text">A fit, healthy body is the best fashion statement. We are here to guide you.</p>
         </div>
       </section>
@@ -74,7 +75,7 @@
   <section class="c-programs">
     <div class="caption">
       <div class="caption__divider"></div>
-      <h3 class="caption__title caption__title--is-right">Effective programs</h3>
+      <h3 class="caption__title caption__title--is-right">OUR CLASSES</h3>
     </div>
     <ul class="programs">
       <li class="programs__item">
@@ -107,10 +108,19 @@
     <div class="caption">
       <h3 class="caption__title caption__title--is-left">gallery</h3>
       <div class="caption__divider"></div>
-      <p class="caption__text">Browse all Instagram photos tagged with <span class="caption__text--is-orange">#mixfitness</span>. View likes and comments.</p>
+      <!--<p class="caption__text">Browse all Instagram photos tagged with <span class="caption__text--is-orange">#mixfitness</span>. View likes and comments.</p>-->
     </div>
-    
     <div class="gallery">
+      <div class="gallery__row">
+        <video controls poster="_assets/video/MIX_poster.jpg" class="gallery__video">
+          <source src="_assets/video/MIX_M6_high.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+          <source src="_assets/video/MIX_M6_high.ogv" type='video/ogg; codecs="theora, vorbis"'>
+          Этот браузер не поддерживает HTML5 видео
+        </video>
+      </div>
+    </div> 
+      
+    <!--<div class="gallery">
       <div class="gallery__row">
         <a href="" class="gallery__link"><img src="_assets/img/_insta/insta_1.jpg" alt="" class="gallery__img"></a>
         <a href="" class="gallery__link"><img src="_assets/img/_insta/insta_2.jpg" alt="" class="gallery__img"></a>
@@ -124,7 +134,7 @@
         <a href="" class="gallery__link"><img src="_assets/img/_insta/insta_8.jpg" alt="" class="gallery__img"></a>
       </div>
     </div>
-    <div class="seemore"><div class="seemore__button">See more</div></div>
+    <div class="seemore"><div class="seemore__button">See more</div></div>-->
   </section>
   <footer class="c-footer">
     <div class="footer">
@@ -159,7 +169,7 @@
       <div class="footer__divider"></div>
       <div class="footer__logo-holder">
         <div class="footer__logo"></div>
-        <p class="footer__copy">&copy; 2017 MIX</p>
+        <p class="footer__copy">&copy; 2017 MIX Studio &ndash; MIX Fitness Sarl</p>
       </div>
     </div>
   </footer>
