--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   </section>
   <section class="c-gallery">
     <div class="caption">
-      <h3 class="caption__title caption__title--is-left">gallery</h3>
+      <h3 class="caption__title caption__title--is-left">Video</h3>
       <div class="caption__divider"></div>
       <!--<p class="caption__text">Browse all Instagram photos tagged with <span class="caption__text--is-orange">#mixfitness</span>. View likes and comments.</p>-->
     </div>
