добавил страничку студии в бурге

--- a/studios/index.html
+++ b/studios/index.html
@@ -60,7 +60,7 @@
         <p class="studios__phone">
           +41 21 320 1041
         </p>
-        <a href="lausanne/" class="studios__button">
+        <a href="bourg/" class="studios__button">
            FIND OUT MORE
         </a>
       </div>
