--- a/prices/index.html
+++ b/prices/index.html
@@ -24,7 +24,7 @@
       </div>
     </nav>
   </header>
-  <main class="l-container l-container--is-gray">
+  <main class="l-container l-container--is-gray l-container--is-narrow">
     <div class="l-container__row l-container__row--is-narrow">
       <div class="l-container__column l-container__column--is-full l-container__column--is-margined">
         <div class="caption">
