--- a/team/index.html
+++ b/team/index.html
@@ -48,7 +48,7 @@
   <main class="c-team">
     
     <div class="caption">
-      <h3 class="caption__title caption__title--is-left">Our team</h3>
+      <h3 class="caption__title caption__title--is-left">Our trainers</h3>
       <div class="caption__divider"></div>
     </div>
     
